k8s/namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    env: prod
    owner: autovyn
