k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autovyn-svc
  namespace: dev
  labels:
    app: autovyn-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: autovyn-app
